# plenjos-shell

./: README.md  meson.build  plenjos_session.c
data/: com.plenjos.shell.desktop.gschema.xml  com.plenjos.shell.panel.gschema.xml  meson.build
protocol/: meson.build
src/: meson.build
src/desktop/: desktop.c  desktop.h  meson.build
src/notifyd/: meson.build  notifyd.c  notifyd.h  plenjos-notifyd-fdo-dbus.xml
src/panel/: meson.build  panel-common.h  panel-draw.c  panel-icon.c  panel-icon.h  panel-interface-toplevel-button.c  panel-interface-toplevel-button.h  panel-interface.c  panel-interface.h  panel.c  panel.gresource.xml  panel.h  theme.css
src/panel/applications-menu/: meson.build  panel-applications-menu.c  panel-applications-menu.h  panel-applications-menu.ui
src/panel/blur/: meson.build  stack-blur.c  stack-blur.h
src/panel/clock/: meson.build  panel-clock.c  panel-clock.h
src/panel/css/: applications-menu.css  common.css  menubar.css  taskbar-common.css  taskbar-menubar.css  theme.css
src/panel/dashboard/: meson.build  panel-applications-menu.c  panel-applications-menu.h  panel-applications-menu.ui
src/panel/examples/: meson.build  simple-example.c  simple-example.py
src/panel/hyprland/: backend.c  backend.h  meson.build  workspaces.c  workspaces.h
src/panel/notifyd/: meson.build  notifyd.c  notifyd.h
src/panel/taskbar/: meson.build  panel-taskbar-application.c  panel-taskbar-application.h  panel-taskbar-icon.c  panel-taskbar-icon.h  panel-taskbar-toplevel-button.c  panel-taskbar-toplevel-button.h  panel-taskbar-window.c  panel-taskbar.c  panel-taskbar.h
src/panel/tray/: audio-button.c  audio-button.h  bluetooth-button.c  bluetooth-button.h  clock.c  clock.h  media-control.c  media-control.h  meson.build  network-button.c  network-button.h  panel-tray-menu.c  panel-tray-menu.h  panel-tray.c  panel-tray.h  power-button.c  power-button.h
